--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -13,7 +13,7 @@ const htmlDescription = marked.parse(description)
 <a
   href={url}
   target="_blank"
-  class="sm:py-5 py-10 flex flex-col sm:flex-row gap-6 group-hover:opacity-60 hover:!opacity-100 transition-opacity"
+  class="sm:py-5 py-10 flex flex-col sm:flex-row gap-6 hover:opacity-60 transition-opacity duration-300"
 >
   <div class="h-full bg-gray-700 rounded-lg aspect-video sm:h-[150px]">
     <Image
