--- a/src/components/ResumeItem.astro
+++ b/src/components/ResumeItem.astro
@@ -9,7 +9,7 @@ const { title, company, date } = Astro.props;
 
 <a
   href={company.url}
-  class="py-3 flex items-center justify-between group-hover:opacity-60 hover:!opacity-100 transition-opacity"
+  class="py-3 flex items-center justify-between  hover:opacity-60 transition-opacity duration-300"
 >
   <div class="flex items-center gap-4">
     <Image
