--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -27,19 +27,11 @@ for (const post of posts) {
         posts.map((post) => (
           <a
             href={`/blog/${post.id}`}
-            class=" sm:flex sm:flex-row-reverse sm:justify-between sm:gap-6 post"
+            class="block sm:flex sm:justify-between sm:gap-6 post"
           >
-            <Image
-              src={post.data.image.url}
-              alt={post.data.image.url}
-              width={100}
-              height={100}
-              class={"rounded-lg w-[100px] h-[100px] object-cover"}
-            />
-            <div class="mt-4 sm:my-auto">
+            <div class="mt-0 sm:my-auto">
               <p class="opacity-60 mb-2">
-                {post.data.pubDate.toLocaleDateString()} ·{" "}
-                {post.data.readingTime}
+                {post.data.pubDate.toLocaleDateString()} · {post.data.readingTime}
               </p>
               <h3 class="font-medium hover-underline">{post.data.title}</h3>
               <p class="text-sm opacity-60 mt-2 mb-3">{post.data.description}</p>
